deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operation-borderless-deployment
  namespace: operation-borderless
  labels:
    app: operation-borderless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: operation-borderless
  template:
    metadata:
      labels:
        app: operation-borderless
    spec:
      containers:
        - name: operation-borderless
          image: europe-west1-docker.pkg.dev/borderless-money-455715/project-repo/operation-borderless:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
